aws-terraform-platform/kubernetes/base/deployment-api-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-2
  labels:
    app: api-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-2
  template:
    metadata:
      labels:
        app: api-2
    spec:
      containers:
        - name: api-2
          image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/api-2:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "500m", memory: "256Mi" }
